BUG#2428 "--old-rpl-compat is broken": I remove the --old-rpl-compat which produces broken binlogs readable neither by 4.0 nor by 3.23. This option is a leftover of the early replication of 4.0.0, when it was still partly compatible with 3.23. I explained this to the user in the bug report.